# cpp-klondike

./: .gitignore  CMakeLists.txt  README.md  main.cpp
solitaire/: Card.cpp  Foundation.h  Makefile  Stack.h
solitaire/src/: Card.h  Deck.cpp  Game.cpp  Game.h
src/: Deck.h  Foundation.cpp  Game.cpp  Game.h  Stack.cpp
